# AttackGame

./: .gitignore  AttackGame.cpp  CMakeLists.txt  Entity.h  GameStateManager.h  IPrintable.h  Monster.h  Player.h  README.md  entity_test.cpp  game_state_man_test.cpp  monster_test.cpp  player_test.cpp  tester_stdout_helper.h
saves/: test_read.json
